--- a/Color Catastrophy.html
+++ b/Color Catastrophy.html
@@ -3,6 +3,20 @@
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 </head>
+<style>
+body {
+	margin: 0;
+	background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
+	background-color: #91d370;
+	
+
+}
+h1 {
+	background-image: -webkit-linear-gradient(#FDBB2D, #3A1C71);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+</style>
 <body>
 <center>
 <h1>Color Catastrophe</h1>
