--- a/Color Catastrophy.html
+++ b/Color Catastrophy.html
@@ -16,6 +16,8 @@ h1 {
 	background-image: -webkit-linear-gradient(#FDBB2D, #3A1C71);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: black;
 }
 </style>
 </head>
