--- a/Color Catastrophy.html
+++ b/Color Catastrophy.html
@@ -18,6 +18,8 @@ h1 {
 	-webkit-text-fill-color: transparent;
 	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color: black;
+	font-size: 350%;
+	margin: 0px;
 }
 </style>
 </head>
