--- a/Color Catastrophe.html
+++ b/Color Catastrophe.html
@@ -4,29 +4,58 @@
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 
-<style>
-body {
-	margin: 0;
-	background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
-	background-color: #91d370;
-	
-
-}
-h1 {
-	background-image: -webkit-linear-gradient(#FDBB2D, #3A1C71);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-webkit-text-stroke-width: 1px;
-	-webkit-text-stroke-color: black;
-	font-size: 350%;
-	margin: 0px;
-}
-</style>
 </head>
 
 <body>
 <center>
-<h1>Color Catastrophe</h1>
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800" height="100">
+  <defs>
+    <link xmlns="http://www.w3.org/1999/xhtml" href="http://fonts.googleapis.com/css?family=Ultra" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      <![CDATA[   
+
+      ::selection {
+        background: black;
+      }
+
+      ::-moz-selection {
+        background: black;
+      }
+
+
+      .filtered{
+        filter: url(#filter);
+        fill: black;
+        font-family: 'Ultra', serif;
+        font-size: 100px;
+      }
+      ]]>
+	body {
+	  	margin: 0;
+		background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
+		background-color: #91d370;
+	}
+    </style>
+    <filter id="filter">
+      <feFlood flood-color="#FF0000" flood-opacity="0.5" result="RED" />
+      <feFlood flood-color="#00FF00" flood-opacity="0.5" result="GREEN" />
+      <feFlood flood-color="#0000FF" flood-opacity="0.5" result="BLUE" />
+      <feComposite operator="in" in="RED" in2="SourceAlpha" result="RED_TEXT"/>
+      <feComposite operator="in" in="GREEN" in2="SourceAlpha" result="GREEN_TEXT"/>
+      <feComposite operator="in" in="BLUE" in2="SourceAlpha" result="BLUE_TEXT"/>
+      <feOffset in="RED_TEXT" dx="-15" dy="0" result="RED_TEXT_OFF"/>
+      <feOffset in="GREEN_TEXT" dx="15" dy="0"  result="GREEN_TEXT_OFF"/>
+      <feOffset in="BLUE_TEXT" dx="0" dy="0"  result="BLUE_TEXT_OFF"/>
+      <feMerge>
+              <feMergeNode in="RED_TEXT_OFF" />
+              <feMergeNode in="GREEN_TEXT_OFF"/>
+              <feMergeNode in="BLUE_TEXT_OFF"/>
+      </feMerge>
+    </filter>
+  </defs>
+  <text class="filtered" x="20" y="85">Color Catastrophe</text>
+</svg><BR>
+
 <div id="boundary" style="display: inline-block; margin:5px;">
 <div id="stage" style="margin:5px;">
 </div></div>
@@ -457,7 +486,7 @@ function toFront(frontToken){
 //make the board container change size based on the size of the page
 function setStageDimensions(){
 	// the height of the board is 80% of the height of the page
-	stage.height("80%");
+	stage.height("70%");
 	// the width is the same as the height
 	stage.width(stage.height());
 	// pass this size back to the caller, its used to determine the token size
