--- a/Color Catastrophe.html
+++ b/Color Catastrophe.html
@@ -30,6 +30,21 @@
         font-size: 100px;
       }
       ]]>
+	  
+	.fixed-background {
+		position:fixed;
+		margin-left: auto;
+		margin-right: auto;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		z-index: -1000;
+		background-position: top center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
+	}
+	
 	body {
 	  	margin: 0;
 		background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
@@ -59,6 +74,7 @@
 <div id="boundary" style="display: inline-block; margin:5px;">
 <div id="stage" style="margin:5px;">
 </div></div>
+<div class="fixed-background"></div>
 </center>
 </body>
 </html>
