--- a/Color Catastrophe.html
+++ b/Color Catastrophe.html
@@ -3,12 +3,30 @@
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+<style>
+body {
+	margin: 0;
+}
 
+.fixed-background {
+	position:fixed;
+	margin-left: auto;
+	margin-right: auto;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1000;
+	background-position: top center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
+}
+</style>
 </head>
 
 <body>
 <center>
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800" height="100">
+<svg width="550" height="80">
   <defs>
     <link xmlns="http://www.w3.org/1999/xhtml" href="http://fonts.googleapis.com/css?family=Ultra" rel="stylesheet" type="text/css" />
     <style type="text/css">
@@ -27,29 +45,9 @@
         filter: url(#filter);
         fill: black;
         font-family: 'Ultra', serif;
-        font-size: 100px;
+        font-size: 70px;
       }
       ]]>
-	  
-	.fixed-background {
-		position:fixed;
-		margin-left: auto;
-		margin-right: auto;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		z-index: -1000;
-		background-position: top center;
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
-	}
-	
-	body {
-	  	margin: 0;
-		background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
-		background-color: #91d370;
-	}
     </style>
     <filter id="filter">
       <feFlood flood-color="#FF0000" flood-opacity="0.5" result="RED" />
@@ -68,7 +66,7 @@
       </feMerge>
     </filter>
   </defs>
-  <text class="filtered" x="20" y="85">Color Catastrophe</text>
+  <text class="filtered" x="20" y="60">Color Catastrophe</text>
 </svg><BR>
 
 <div id="boundary" style="display: inline-block; margin:5px;">
@@ -114,10 +112,10 @@ function initGame(){
 
 	//recalculate the stage layout math if the window is rezised
 	$(window).resize(function(){
-		// recalculate stage size
-		stageSize = setStageDimensions();
-		// redraw the board
-		drawBoard(gamestate, false);
+			// recalculate stage size
+			stageSize = setStageDimensions();
+			// redraw the board
+			drawBoard(gamestate, false);
 	});
 
 	//get a random puzzle type
@@ -535,11 +533,30 @@ function toFront(frontToken){
 
 //make the board container change size based on the size of the page
 function setStageDimensions(){
-	// the height of the board is 80% of the height of the page
-	stage.height("70%");
-	stage.height(Math.floor(stage.height));
+	// we want to store the lesser between the area available in width vs height
+	var lesser;
+	
+	// we only want to use 70% of the height, because the title and controls go above and below
+	var height = $(window).height() * 0.7;
+	
+	// we can use about 90% of the width of the page
+	var width = $(window).width() * 0.9;
+	
+	// store the lesser of the 2 values between the page height and the page width
+	if (width < height){
+		lesser = width;
+	}
+	else {
+		lesser = height;
+	}
+	//we need to round down to a whole number of pixel
+	lesser = Math.floor(lesser);
+	// set the dimensions of the stage to take the appropraite dimension
+	stage.height(lesser);
 	// the width is the same as the height
-	stage.width(stage.height());
+	stage.width(lesser);
+	// store the size of the stage
+	stageSize = lesser;	
 	//(re)calculate token size
 	tokenSize = stageSize / difficulty;
 	// take note of how far away the left side of the board is from the left side of the screen
