--- a/Color Catastrophe.html
+++ b/Color Catastrophe.html
@@ -3,6 +3,7 @@
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
 <style>
 body {
 	margin: 0;
@@ -21,54 +22,29 @@ body {
 	background-repeat: no-repeat;
 	background-image: linear-gradient(319deg, #91d370 0%, #bca0ff 37%, #f2cd54 100%);
 }
+
+#movesText{
+	font-size: 50%;
+	text-shadow: rgba(50,50,255,0.5) -5px 0px 0px, rgba(255,50,50,0.5) +5px 0px 0px;
+}
+
+.title-text
+{
+color:rgba(50,255,50,0.5);
+text-shadow: rgba(50,50,255,0.5) -10px 0px 0px, rgba(255,50,50,0.5) +10px 0px 0px;
+padding-left:10px;
+padding-bottom: 0px;
+font-size: 400%;
+font-family: 'Righteous';
+margin:0;
+}
 </style>
 </head>
 
 <body>
 <center>
-<svg width="700" height="80">
-  <defs>
-    <link xmlns="http://www.w3.org/1999/xhtml" href="http://fonts.googleapis.com/css?family=Ultra" rel="stylesheet" type="text/css" />
-    <style type="text/css">
-      <![CDATA[   
-
-      ::selection {
-        background: black;
-      }
-
-      ::-moz-selection {
-        background: black;
-      }
-
-
-      .filtered{
-        filter: url(#filter);
-        fill: black;
-        font-family: 'Ultra', serif;
-        font-size: 70px;
-      }
-      ]]>
-    </style>
-    <filter id="filter">
-      <feFlood flood-color="#FF0000" flood-opacity="0.5" result="RED" />
-      <feFlood flood-color="#00FF00" flood-opacity="0.5" result="GREEN" />
-      <feFlood flood-color="#0000FF" flood-opacity="0.5" result="BLUE" />
-      <feComposite operator="in" in="RED" in2="SourceAlpha" result="RED_TEXT"/>
-      <feComposite operator="in" in="GREEN" in2="SourceAlpha" result="GREEN_TEXT"/>
-      <feComposite operator="in" in="BLUE" in2="SourceAlpha" result="BLUE_TEXT"/>
-      <feOffset in="RED_TEXT" dx="-15" dy="0" result="RED_TEXT_OFF"/>
-      <feOffset in="GREEN_TEXT" dx="15" dy="0"  result="GREEN_TEXT_OFF"/>
-      <feOffset in="BLUE_TEXT" dx="0" dy="0"  result="BLUE_TEXT_OFF"/>
-      <feMerge>
-              <feMergeNode in="RED_TEXT_OFF" />
-              <feMergeNode in="GREEN_TEXT_OFF"/>
-              <feMergeNode in="BLUE_TEXT_OFF"/>
-      </feMerge>
-    </filter>
-  </defs>
-  <text class="filtered" x="90" y="60">Color Catastrophe</text>
-</svg><BR>
-
+<span class="title-text">Colour Catastrophe</h1>
+<BR>
 <div id="boundary" style="display: inline-block; margin:5px;">
 <div id="stage" style="margin:5px;">
 </div></div>
@@ -331,7 +307,8 @@ function drawBoard(gamestate, victorycheck = true){
 		drawBoard(gamestate, false);
 	} else {
 		//if you didnt win, just add the number of moves that youve taken under the board
-		stage.append("Moves: "+moves);
+		var movesText = "<span id='movesText' class='title-text'> Moves: "+moves+"</span>";
+		stage.append(movesText);
 	}
 }
 
@@ -340,7 +317,7 @@ function addDifficultyButton(){
 	// add this to the outer boundary div so it doesnt get redrawn with the board
 	// i put it in a span in order to delete the surrounding code along with the button later
 	if(gameEnd == true){
-		$("#boundary").append("<span id='diffbutton'><BR><button onclick='increaseDifficulty();'>Increase Difficulty</button></span>");
+		$("#boundary").append("<br><span id='diffbutton'><button onclick='increaseDifficulty();'>Increase Difficulty</button></span>");
 	}
 }
 
